--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 
   <nav class="navbar">
-      <div class="logos okk"><img class="nextt  ok" src="../images/mes blue.png" alt="Logo"></div>
+      <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i  class="fa fa-bars"></i>
@@ -383,29 +383,28 @@ window.onclick = function(event) {
 <div class="row">
   <div class="col">
     <ul class="unordered-list">
-      <li class="icon-list"><img src="../images/carrer.png" class="icon-img"/>CAREER COUNSELING</li>
-      <li class="icon-list"><img src="../images/location.png" class="icon-img "/>ADMISSION GUIDANCE</li>
-      <li class="icon-list"><img src="../images/search.png" class="icon-img "/> APTITUDE TESTING</li>
-      <li class="icon-list"><img src="../images/child.png" class="icon-img "/>ADMISSION GUIDANCE</li>
-      <li class="icon-list"><img src="../images/promotion.png" class="icon-img "/>PERSONALITY TRAINING</li>
-      <li class="icon-list"><img src="../images/job-search.png" class="icon-img "/>JOB SEARCH STRATEGIES</li>
-      <li class="icon-list"><img src="../images/award.png" class="icon-img "/>MERIT ASSISTANCE</li>
-      <li class="icon-list"><img src="../images/test.png" class="icon-img "/><span>COMPETITIVE EXAM TRAINING</span> </li>
-      <li class="icon-list"><img src="../images/resume.png" class="icon-img "/>
+      <li class="icon-list"><img src="images/carrer.png" class="icon-img"/>CAREER COUNSELING</li>
+      <li class="icon-list"><img src="images/location.png" class="icon-img "/>ADMISSION GUIDANCE</li>
+      <li class="icon-list"><img src="images/search.png" class="icon-img "/> APTITUDE TESTING</li>
+      <li class="icon-list"><img src="images/child.png" class="icon-img "/>ADMISSION GUIDANCE</li>
+      <li class="icon-list"><img src="images/promotion.png" class="icon-img "/>PERSONALITY TRAINING</li>
+      <li class="icon-list"><img src="images/award.png" class="icon-img "/>MERIT ASSISTANCE</li>
+      <li class="icon-list"><img src="images/test.png" class="icon-img "/><span>COMPETITIVE EXAM TRAINING</span> </li>
+      <li class="icon-list"><img src="images/resume.png" class="icon-img "/>
       <span>APPLICATION ASSISTANCE</span> </li>
     </ul>
   </div>
   <div class="col">
     <ul class="unordered-list">
-    <li class="icon-list"><img src="../images/college.png" class="icon-img "/> COLLEGES COMPARISON</li>
-      <li class="icon-list"><img src="../images/learning.png" class="icon-img "/> COURSE SELECTION</li>
-      <li class="icon-list"><img src="../images/op.png" class="icon-img "/>CAREER OPTIONS</li>
-      <li class="icon-list"><img src="../images/online.png" class="icon-img "/>INTERVIEW TRAINING</li>
-      <li class="icon-list"><img src="../images/scholarship.png" class="icon-img "/>SCHOLARSHIPS</li>
-      <li class="icon-list"><img src="../images/visitor.png" class="icon-img "/>CAMPUS VISITS</li>
-      <li class="icon-list"><img src="../images/admission.png" class="icon-img "/> DIRECT ADMISSION</li>
-      <li class="icon-list"><img src="../images/placement.png" class="icon-img "/>PLACEMENTS</li>
-      <li class="icon-list"><img src="../images/personal.png" class="icon-img "/>BANK LOAN ASSISTANCE</li>
+    <li class="icon-list"><img src="images/college.png" class="icon-img "/> COLLEGES COMPARISON</li>
+      <li class="icon-list"><img src="images/learning.png" class="icon-img "/> COURSE SELECTION</li>
+      <li class="icon-list"><img src="images/op.png" class="icon-img "/>CAREER OPTIONS</li>
+      <li class="icon-list"><img src="images/online.png" class="icon-img "/>INTERVIEW TRAINING</li>
+      <li class="icon-list"><img src="images/scholarship.png" class="icon-img "/>SCHOLARSHIPS</li>
+      <li class="icon-list"><img src="images/visitor.png" class="icon-img "/>CAMPUS VISITS</li>
+      <li class="icon-list"><img src="images/admission.png" class="icon-img "/> DIRECT ADMISSION</li>
+      <li class="icon-list"><img src="images/placement.png" class="icon-img "/>PLACEMENTS</li>
+      <li class="icon-list"><img src="images/personal.png" class="icon-img "/>BANK LOAN ASSISTANCE</li>
     </ul>
   </div>
 </div>
@@ -910,7 +909,7 @@ window.onclick = function(event) {
   <div class="testimony-wrap">
   <div class="text">
   <div class="d-flex align-items-center mb-4">
-  <div class="user-img" style="background-image: url(images/Vanitha.jpeg)">
+  <div class="user-img" style="background-image: url(images/vanithA.jpeg)">
   <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
   </div>
   <div class="ps-3 tx">
