--- a/application-form.html
+++ b/application-form.html
@@ -932,7 +932,7 @@
 </div> -->
 
 <nav class="navbar">
-  <div class="logos okk"><img class="nextt  ok" src="../images/mes blue.png" alt="Logo"></div>
+  <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
   <input type="checkbox" id="click">
   <label for="click" class="menu-btn">
     <i  class="fa fa-bars"></i>
