--- a/courses.html
+++ b/courses.html
@@ -102,7 +102,7 @@
 </div>
 </div> -->
   <nav class="navbar">
-      <div class="logos okk"><img class="nextt  ok" src="../images/mes blue.png" alt="Logo"></div>
+      <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i  class="fa fa-bars"></i>
