--- a/courses.html
+++ b/courses.html
@@ -127,9 +127,91 @@
 </div>
 </div>
 </section>
+<header>
+  <h1>Why Choose Us</h1>
+</header>
+<section class="features">
+  <div class="feature">
+    <i class="fa fa-globe"></i>
+    <h2>Global Reach</h2>
+    <p>Our company has a global presence, which means we can provide services and solutions to clients all around the world.</p>
+  </div>
+  <div class="feature">
+    <i class="fa fa-star"></i>
+    <h2>Quality Service</h2>
+    <p>We pride ourselves on providing high-quality services and solutions that meet the needs and expectations of our clients.</p>
+  </div>
+  <div class="feature">
+    <i class="fa fa-users"></i>
+    <h2>Expert Team</h2>
+    <p>Our team consists of highly skilled and experienced professionals who are dedicated to delivering the best results for our clients.</p>
+  </div>
+</section>
+<style>
+  * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
 
+header {
+  background-color: #292b86;
+  color: #fff;
+  padding: 20px;
+}
 
+header h1 {
+  font-size: 36px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.features {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 50px;
+}
+
+.feature {
+  flex-basis: calc(33.33% - 20px);
+  margin-bottom: 50px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  box-shadow: 2px 2px 10px rgb(252, 252, 252);
+}
+
+.feature i {
+  font-size: 48px;
+  margin-bottom: 20px;
+  color: #000000;
+}
+
+.feature h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #000000;
+}
+
+.feature p {
+  font-size: 16px;
+  color: #000000;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+</style>
 
 <div id="modal" class="modal">
   <div class="modal-content">
