--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
 </style>
 
 
-  <nav class="navbar">
-      <div class="logos okk"><img class="nextt  ok" src="../images/mes blue.png" alt="Logo"></div>
-      <input type="checkbox" id="click">
-      <label for="click" class="menu-btn">
-        <i  class="fa fa-bars"></i>
-      </label>
-      <ul >
-        <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="/courses">Courses</a></li>
-<li class="nav-item"><a class="nav-link " href="/team">About Us</a></li>
-<li class="nav-item"><a class="nav-link" href="/Registration-form">Register</a></li>
-
-<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-      </ul>
-    </nav>
+<nav class="navbar">
+  <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
+  <input type="checkbox" id="click">
+  <label for="click" class="menu-btn">
+    <i  class="fa fa-bars"></i>
+  </label>
+  <ul >
+    <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
+    <li class="nav-item"><a class="nav-link active " href="team.html">About Us</a></li>
+    <li class="nav-item"><a class="nav-link" href="application-form.html">Register</a></li>
+    
+    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 <section class="hero-wrap" style="background-image: url('images/coo.jpg');">
 <div class="overlay"></div>
 <div class="container">
@@ -195,10 +195,10 @@ function typewriter()
   iIndex++;
   if ( iIndex != aText.length ) {
    iArrLength = aText[iIndex].length;
-   setInterval("typewriter()", 500);
+   setTimeout("typewriter()", 500);
   }
  } else {
-  setInterval("typewriter()", iSpeed);
+  setTimeout("typewriter()", iSpeed);
  }
 }
 
