--- a/index.html
+++ b/index.html
@@ -657,19 +657,7 @@ documents required for Visa processing</p></li>
 students for selected countries</p></li>
 </ul>
     </div>
-        <div class="feature card">
-      <ul>
-      <i class="fas fa-star"></i>
-      <h2>FOREIGN EXCHANGE ASSISTANCE</h2>
-      <li><p>Galaxy Education also provides foreign exchange
-assistance for the students interested in studying
-Abroad</p></li>
-      
-<li><p>We have tied up with different Foreign Exchange
-dealers for currency exchange and students can
-choose according to their convenience</p></li>
-</ul>
-    </div>
+     
         <div class="feature card">
       <ul>
       <i class="fas fa-star"></i>
@@ -867,15 +855,15 @@ loadMoreBtn.addEventListener('click', function() {
  
    #open-modal{
 	position:sticky;
-	width:40px;
-	height:50px;
+	width:4%;
+	height:4%;
 	bottom:250px;
 	left: 1350px;
 	 background-image: linear-gradient(to bottom, #2133d8 0%, #38c3d3 100%);
 	color:#ffffff;
 	border-radius:50px;
 	text-align:center;
-    font-size:20px;
+    font-size:30px;
     z-index:100;
    }
 
