--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ typewriter();
   </script>
   
     
-<p class="mb-4 sub-thin-heading">Looking For Best University And Less Fees?</p>
+<p id="typedtext" class="mb-4 sub-thin-heading">Looking For Best University And Less Fees?</p>
 <p><a href="/contact" class="btn btn-primary p-4 py-3" >We are here to help You 
     <span class="ion-ios-arrow-round-forward"></span></a>
      <a href="#" class="btn btn-white p-4 py-3"  onclick="window.open('images/MES.pdf')">view course<span class="ion-ios-arrow-round-forward"></span></a></p>
