--- a/team.html
+++ b/team.html
@@ -80,7 +80,7 @@
 
     <section
       class="hero-wrap hero-wrap-2"
-      style="background-image: url('images/bg_2.jpg');"
+      style="background-image: url('images/team.jpeg');"
     >
       <div class="overlay"></div>
       <div class="container">
