--- a/team.html
+++ b/team.html
@@ -537,17 +537,14 @@ his passion for marketing.
             <div class="staff">
               <div
                 class="img"
-                style="background-image: url(images/image_6.jpg);"
+                style="background-image: url(images/anwa.jpg);"
               >
                 
               </div>
               <div class="text">
                 <h3>Ph.D Arthur MaGregor</h3>
                 <span id="sub-heading" class="position">Developer</span>
-                          <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Experience specifically in the Educational sector, develop an
-overall plan to promote company and reviewing applications
-and making selections for scholarship programs at Universities
-, with experience advising for career counseling
+                          <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, look
 </p>
               </div>
             </div>
