--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ typewriter();
   <div class="row">
   <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
   <h6>What is next.in</h6>
-   <h2 class="">IINDIA</h2>
+   <h2 class="">INDIA</h2>
   </div>
   </div>
   <p class="mb-4 ml-5 mr-5" > Students looking to study in India have only handful of options available. We give students best options available. We also provide scholarship options on the basis of marks. Hence, we trying to solve one of the most complicated and critical thing in the world, our experts focused on bringing best outcome. </p>
