--- a/team.html
+++ b/team.html
@@ -97,14 +97,14 @@
       </div>
     </section>
 
-    <div class="container mt-5 mb-5" style=" margin: auto;">
+    <div class="container-fluid mt mb-5"  style="background-image: url('images/back.jpg');">
       <div class="row">
         <center><div
             class="col-10 col-sm-10 col-md-10 col-lg-10 col-xxl-10 col-xl-10 heading-section"
           >
             <h2 class="mt-5" data-aos="fade-up">About Us</h2>
 
-            <p class="mt-5 p" style="text-align: justify;">Welcome to Whatisnext.in, a subsidiary of Master
+            <p class="mt-5 mb-5 p" style="text-align: justify;">Welcome to Whatisnext.in, a subsidiary of Master
               Educational Solutions (MES). We are an Educational Consultancy
               offering career counseling and admissions guidance services all
               over India since 2018. Our platform name itself is a question that
@@ -141,8 +141,9 @@
         </center>
       </div>
     </div>
+    
 <div class="containerr">
-  <img class="profile-img imgr" src="images/amal.1.jpg" alt="your-image-alt-text">
+  <img class="profile-img imgr" src="../images/amal.1.jpg" alt="your-image-alt-text">
   <div  class="textt">
        <h3 class="name" >AMAL MURALI</h3>
               <h6 class="name">Co-Founder & CEO</h6>
@@ -156,9 +157,9 @@
                   and His commitment to excellence is evident in everything he
                   does</p>
       <div class="social-icons">
-  <a href="#"><i class="fa fa-facebook"></i></a>
+   <a href="#"><i class="fa fa-instagram"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
-  <a href="#"><i class="fa fa-instagram"></i></a>
 </div>
   </div>
 </div>
@@ -172,12 +173,12 @@
                 the Education Sector from Genius Education Service, Dubai, UAE
                 in a convocation program held in Burj Khalif-a</p>
                  <div class="social-icons">
-  <a href="#"><i class="fa fa-facebook"></i></a>
-  <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-instagram"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-twitter"></i></a>
 </div>
   </div>
-  <img class="profile-img2 imgr-2" src="images/lsejja.jpg" alt="your-image-alt-text">
+  <img class="profile-img2 imgr-2" src="../images/lsejja.jpg" alt="your-image-alt-text">
   
 </div>
 <style>
@@ -289,8 +290,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background-color: #0e0b0b;
   margin-right: 10px;
@@ -301,7 +302,7 @@
 .social-icons a i {
   order: 2;
   color: #fff;
-  font-size: 10px;
+  font-size: 13px;
 }
   .profile-img {
    height: 220px;
@@ -385,7 +386,9 @@
     flex-direction: column;
   }
 
+  .profile-img {
   
+  }
    .profile-img2{ border-radius: 20px ;
       
       margin-right: 0px;
