--- a/team.html
+++ b/team.html
@@ -102,9 +102,9 @@
         <center><div
             class="col-10 col-sm-10 col-md-10 col-lg-10 col-xxl-10 col-xl-10 heading-section"
           >
-            <h2 class="mt-5" data-aos="fade-up">About Us</h2>
-
-            <p class="mt-5 mb-5 p" style="text-align: justify;">Welcome to Whatisnext.in, a subsidiary of Master
+            <h1 class="mt-5" data-aos="fade-up" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">About </h1>
+<h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 550;">Whatisnext.in</h2>
+            <p class="mt-5 mb-5 p" style="text-align: justify;">Welcome to <b>Whatisnext.in</b> , a subsidiary of Master
               Educational Solutions (MES). We are an Educational Consultancy
               offering career counseling and admissions guidance services all
               over India since 2018. Our platform name itself is a question that
@@ -143,7 +143,7 @@
     </div>
     
 <div class="containerr">
-  <img class="profile-img imgr" src="../images/amal.1.jpg" alt="your-image-alt-text">
+  <img class="profile-img imgr" src="images/amal.1.jpg" alt="your-image-alt-text">
   <div  class="textt">
        <h3 class="name" >AMAL MURALI</h3>
               <h6 class="name">Co-Founder & CEO</h6>
@@ -157,9 +157,9 @@
                   and His commitment to excellence is evident in everything he
                   does</p>
       <div class="social-icons">
-   <a href="#"><i class="fa fa-instagram"></i></a>
-  <a href="#"><i class="fa fa-linkedin"></i></a>
-  <a href="#"><i class="fa fa-twitter"></i></a>
+   <a href="https://instagram.com/amalmuralioffical?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+  <a href="https://www.linkedin.com/in/amalmoffical"><i class="fa fa-linkedin"></i></a>
+  <a href="https://mobile.twitter.com/AMALMURALI2K17"><i class="fa fa-twitter"></i></a>
 </div>
   </div>
 </div>
@@ -173,12 +173,13 @@
                 the Education Sector from Genius Education Service, Dubai, UAE
                 in a convocation program held in Burj Khalif-a</p>
                  <div class="social-icons">
-  <a href="#"><i class="fa fa-instagram"></i></a>
-  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href=""><i class="fa fa-instagram"></i></a>
+  <a href="https://www.linkedin.com/in/mohammed-sajjad-ak-7014b9121
+  "><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
 </div>
   </div>
-  <img class="profile-img2 imgr-2" src="../images/lsejja.jpg" alt="your-image-alt-text">
+  <img class="profile-img2 imgr-2" src="images/lsejja.jpg" alt="your-image-alt-text">
   
 </div>
 <style>
