--- a/team.html
+++ b/team.html
@@ -54,10 +54,24 @@
       <i class="fa fa-whatsapp my-float"></i>
     </a>
     <style>
-      .float{ position:fixed; width:60px; height:60px; bottom:30px; right:25px;
-      background-color:#25d366; color:#ffffff; border-radius:50px;
-      text-align:center; font-size:30px; z-index:100; } .my-float{
-      margin-top:16px; }
+      .float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:20px;
+	left:25px;
+	background-color:#25d366;
+	color:#ffffff;
+	border-radius:50px;
+	text-align:center;
+    font-size:30px;
+    z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
+}
+
     </style>
  
  <nav class="navbar">
@@ -173,7 +187,7 @@
                 the Education Sector from Genius Education Service, Dubai, UAE
                 in a convocation program held in Burj Khalif-a</p>
                  <div class="social-icons">
-  <a href=""><i class="fa fa-instagram"></i></a>
+  <a href="https://instagram.com/sajjad_puthur?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
   <a href="https://www.linkedin.com/in/mohammed-sajjad-ak-7014b9121
   "><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
