--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     <i  class="fa fa-bars"></i>
   </label>
   <ul >
-    <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
+    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
     <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
-    <li class="nav-item"><a class="nav-link active " href="team.html">About Us</a></li>
+    <li class="nav-item"><a class="nav-link  " href="team.html">About Us</a></li>
     <li class="nav-item"><a class="nav-link" href="application-form.html">Register</a></li>
     
     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -263,23 +263,32 @@ typewriter();
 </div>
 </div>
 </section>
-
-  <div class="container" style="padding-left: 5%; padding-right: 5%; text-align: justify;">
-  <div class="row">
-  <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
-  <h6>What is next.in</h6>
-   <h2 class="">INDIA</h2>
+<section class="mt-5">
+  <div class="container" style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
+<div class="row">
+  <div class="col-md-6">
+      <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
+    <h2 class="col-md-10 heading-section" data-aos="fade-up" style="font-family: 'Times New Roman', Times, serif;">Mission</h2> </div>
+    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> Our mission is to provide career counseling to our students by helping them to choose the right
+course and the right College/University which helps
+them to achieve their career goals . We also provide complete analytical information about
+trending and upcoming careers according to the industry
+We understand that every student is unique, and we tailor our services to meet the specific
+needs and goals of each individual. Whether students need help with college applications, loan
+assistance , scholarships, or preparing for exams, we are here to support students very step of
+the way.</p>
   </div>
+  <div class="col-md-6" >
+      <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
+    <h2 class="col-md-10 heading-section" data-aos="fade-up" style="font-family: 'Times New Roman', Times, serif;">Vission</h2> </div>
+    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a
+world of opportunities. We are dedicated to helping our clients succeed and reach their full
+potential.</p>
   </div>
-  <p class="mb-4 ml-5 mr-5" > Students looking to study in India have only handful of options available. We give students best options available. We also provide scholarship options on the basis of marks. Hence, we trying to solve one of the most complicated and critical thing in the world, our experts focused on bringing best outcome. </p>
-  <p class="mb-4 ml-5 mr-5" style="text-align: j
-  ; ">Student want to be confident that the post-secondary studies they choose is the best option for them. The recommender helps the student discover the best schools that they can get admitted. This unbiased platform helps students connect with universities and colleges that are the best fit for their grades and interests.</p>
-
-  <div class="col-md-10  heading-section" data-aos="fade-up">
-  <h2 class="">OUR GOALS</h2>
 </div>
-<p class="mb-5">Our goal is to help students by facilitate admissions in their dream universities and colleges along with that we facilitate accomodation and scholarships.<br>We aspire to become India's largest student portal and wants to reduce all the difficulties in university admission process. </p>
-</div> 
+</div>
+
+</section>
 <header><h1>
   <span>Why</span>
   <span>Choose</span>
