--- a/team.html
+++ b/team.html
@@ -111,7 +111,7 @@
     <div class="col-md-6">
       <img src="images/website ceo-1 (1).jpg" alt="team member image" class="img-fluid">
     </div>
-    <div id="teams-para" class="col-md-6" style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding-left: 5%; padding-right: 5%;">
+    <div id="teams-para" class="col-md-6" style="text-align: justify;  padding-left: 5%; padding-right: 5%;">
       <h2 class="name">AMAL MURALI</h2>
       <h6 class="name">Co-Founder & CEO</h6>
       <p >With
@@ -130,7 +130,7 @@
     </div>
   </div>
   <div class="row mt-5" id="row-space">
-    <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding-left: 2%; padding-right: %; margin-top: 8%; ">
+    <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; padding-left: 2%;  margin-top: 8%; ">
       <h2 class="name">Mohammed Sajjad A K</h2>
        <h6 class="name">Founder & Chairman</h6>
       <p >With over 8
@@ -401,9 +401,7 @@ box-shadow: 10px 10px 11px 1px rgba(0,0,0,1);
     flex-direction: column;
   }
 
-  .profile-img {
-  
-  }
+ 
    .profile-img2{ border-radius: 20px ;
       
       margin-right: 0px;
