--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
           >
              <h1 class="mt-5" data-aos="fade-up" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">About </h1>
 <h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 550;">whatisnext.in</h2>
-            <p class="mt-5 mb-5 p" style="text-align: justify;">Welcome to <b>Whatisnext.in</b> , a subsidiary of ( Master Educational Solutions ) . MES is an
+            <p class="mt-5 mb-5 p" style="text-align: justify;">Welcome to <b>Whatisnext.in</b>,a subsidiary of (Master Educational Solutions).MES is an
               Educational consultancy offering career counseling and admissions guidance services all
               over India since 2013. we believe that to sustain in any business, There is a need for
               constant improvement. after a brainstorming session with our team ,<b>In 2018</b>  came up
@@ -561,9 +561,7 @@ his passion for marketing.
                 <h3>Ph.D Arthur MaGregor</h3>
                 <span id="sub-heading" class="position">Developer</span>
                           <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Experience specifically in the Educational sector, develop an
-overall plan to promote company and reviewing applications
-and making selections for scholarship programs at Universities
-, with experience advising for career counseling
+fgaththghhadtj
 </p>
               </div>
             </div>
