--- a/index.html
+++ b/index.html
@@ -263,27 +263,29 @@ typewriter();
 </div>
 </div>
 </section>
-<section class="mt-5">
-  <div class="container" style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
-<div class="row">
+<style>
+  .Vission{
+    margin-top: 40px;
+  }
+  @media (max-width: 767.98px) {
+  .Vission {
+    margin-top: 0px;
+  
+
+  }}
+</style>
+<section class="Vission">
+  <div class="container " style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
+<div class="row mb-5">
   <div class="col-md-6">
       <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
-    <h2 class="col-md-10 heading-section" data-aos="fade-up" style="font-family: 'Times New Roman', Times, serif;">Mission</h2> </div>
-    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> Our mission is to provide career counseling to our students by helping them to choose the right
-course and the right College/University which helps
-them to achieve their career goals . We also provide complete analytical information about
-trending and upcoming careers according to the industry
-We understand that every student is unique, and we tailor our services to meet the specific
-needs and goals of each individual. Whether students need help with college applications, loan
-assistance , scholarships, or preparing for exams, we are here to support students very step of
-the way.</p>
+    <h2 class="col-md-10 heading-section" data-aos="fade-up" >Mission</h2> </div>
+    <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, sans-serif;"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
   <div class="col-md-6" >
       <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
-    <h2 class="col-md-10 heading-section" data-aos="fade-up" style="font-family: 'Times New Roman', Times, serif;">Vission</h2> </div>
-    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a
-world of opportunities. We are dedicated to helping our clients succeed and reach their full
-potential.</p>
+    <h2 class="col-md-10 heading-section" data-aos="fade-up" >Vission</h2> </div>
+    <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ">At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
   </div>
 </div>
 </div>
