--- a/team.html
+++ b/team.html
@@ -123,7 +123,7 @@
                   and His commitment to excellence is evident in everything he
                   does</p>
       <div class="social-icons">
-   <a href="https://instagram.com/amalmuralioffical?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+   <a href="info@whatisnext.in"><i class="fa fa-envelope"></i></a>
   <a href="https://www.linkedin.com/in/amalmoffical"><i class="fa fa-linkedin"></i></a>
   <a href="https://mobile.twitter.com/AMALMURALI2K17"><i class="fa fa-twitter"></i></a>
 </div>
@@ -132,14 +132,14 @@
   <div class="row mt-5" id="row-space">
     <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; padding-left: 2%;  margin-top: 8%; ">
       <h2 class="name">Mohammed Sajjad A K</h2>
-       <h6 class="name">Founder & Chairman</h6>
+       <h6 class="name">Founder & Md</h6>
       <p >With over 8
                 years of experience in education as a Career Counsellor, Sajjad
                 has won the Award for "Young Entrepreneur of the year 2020" in
                 the Education Sector from Genius Education Service, Dubai, UAE
                 in a convocation program held in Burj Khalif-a</p>
     <div class="social-icons">
-  <a href="https://instagram.com/sajjad_puthur?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
+      <a href="info@whatisnext.in"><i class="fa fa-envelope"></i></a>
   <a href="https://www.linkedin.com/in/mohammed-sajjad-ak-7014b9121
   "><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
@@ -286,7 +286,7 @@ box-shadow: 10px 10px 11px 1px rgba(0,0,0,1);
 
 .name{
    font-weight: bold;
-  text-transform: uppercase;
+  
 }
 @media (max-width: 767px) {
   .containerr {
