--- a/team.html
+++ b/team.html
@@ -558,7 +558,7 @@ his passion for marketing.
                 
               </div>
               <div class="text">
-                <h3>Ph.D Arthur MaGregor</h3>
+                <h3>Anwar sadath</h3>
                 <span id="sub-heading" class="position">Developer</span>
                           <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Experience specifically in the Educational sector, develop an
 fgaththghhadtj
