--- a/team.html
+++ b/team.html
@@ -123,7 +123,7 @@
                   and His commitment to excellence is evident in everything he
                   does</p>
       <div class="social-icons">
-   <a href="info@whatisnext.in"><i class="fa fa-envelope"></i></a>
+   <a href="info@whatisnext.in"><i class="fa fa-google"></i></a>
   <a href="https://www.linkedin.com/in/amalmoffical"><i class="fa fa-linkedin"></i></a>
   <a href="https://mobile.twitter.com/AMALMURALI2K17"><i class="fa fa-twitter"></i></a>
 </div>
@@ -139,7 +139,7 @@
                 the Education Sector from Genius Education Service, Dubai, UAE
                 in a convocation program held in Burj Khalif-a</p>
     <div class="social-icons">
-      <a href="info@whatisnext.in"><i class="fa fa-envelope"></i></a>
+      <a href="info@whatisnext.in"><i class="fa fa-google"></i></a>
   <a href="https://www.linkedin.com/in/mohammed-sajjad-ak-7014b9121
   "><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
