--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
   <div class="row mt-5" id="row-space">
     <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; padding-left: 2%;  margin-top: 8%; ">
       <h2 class="name">Mohammed Sajjad A K</h2>
-       <h6 class="name">Founder & Md</h6>
+       <h6 class="name">Founder & MD</h6>
       <p >With over 8
                 years of experience in education as a Career Counsellor, Sajjad
                 has won the Award for "Young Entrepreneur of the year 2020" in
