--- a/index.html
+++ b/index.html
@@ -270,15 +270,14 @@ typewriter();
   @media (max-width: 767.98px) {
   .Vission {
     margin-top: 0px;
-  
-
-  }}
+  }
+  }
 </style>
 <section class="Vission">
   <div class="container " style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
 <div class="row mb-5">
   <div class="col-md-6">
-      <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
+      <div class="col-md-10  heading-section" data-aos="fade-up">
     <h2 class="col-md-10 heading-section" data-aos="fade-up" >Mission</h2> </div>
     <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, sans-serif;"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
