--- a/index.html
+++ b/index.html
@@ -272,19 +272,25 @@ typewriter();
     margin-top: 0px;
   }
   }
+  .mission-para{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
+    font-size: 45px;
+  }
 </style>
-<section class="Vission">
+<section class="Vission" >
   <div class="container " style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
-<div class="row mb-5">
-  <div class="col-md-6">
-      <div class="col-md-10  heading-section" data-aos="fade-up">
-    <h2 class="col-md-10 heading-section" data-aos="fade-up" >Mission</h2> </div>
-    <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, sans-serif;"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
+<div class="row">
+  <div class="col-md-6 mt-5 mb-5">
+      <div class="mission-para " data-aos="fade-up">
+    <h2 class="mission-para" data-aos="fade-up" >Mission</h2> </div>
+    <p id="mission-para"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
-  <div class="col-md-6" >
-      <div class="col-md-10 mt-4 heading-section" data-aos="fade-up">
-    <h2 class="col-md-10 heading-section" data-aos="fade-up" >Vission</h2> </div>
-    <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ">At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
+ 
+  <div class="col-md-6 mt-5 mb-5 " >
+      <div  data-aos="fade-up">
+    <h2 class="mission-para " data-aos="fade-up"  >Vission</h2> </div>
+    <p id="mission-para" >At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
   </div>
 </div>
 </div>
