--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
   s1.setAttribute('crossorigin','*');
   s0.parentNode.insertBefore(s1,s0);
   })();
+  
   </script>
   <!--End of Tawk.to Script-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -88,61 +89,10 @@
 <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-<!-- <div class="top-wrap">
-<div class="container">
-<div class="row">
-<div class="col-md col-xl-5 d-flex align-items-center ">
-<a class="navbar-brand align-items-center mb-5" href="index.html">
-  
-  <section class="logos okk">
-    <img src="images/mes blue.png" class="nextt  ok">
-</section>
-</a>
-</div>
-<div class="col-md d-flex align-items-center">
-<div class="con d-flex ">
-<div class="icon mb-5 "><span class="flaticon-clock"></span></div>
-<div class="text  ">
-<span>Monday - Friday</span>
-<strong>8:00AM-8:00PM</strong>
-</div>
-</div>
-</div>
-<div class="col-md d-flex align-items-center">
-<div class="con d-flex">
-<div class="icon mb-5 "><span class="flaticon-telephone"></span></div>
-<div class="text">
-<span>Call Us</span>
-<strong>+2 392 3929 210</strong>
-</div>
-</div>
-</div>
-<div class="col-md d-flex justify-content-end align-items-center">
-<div class="social-media ">
-<p class="mb-5 d-flex">
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-</p>
-</div>
-</div>
-</div>
-</div>
-</div> -->
+
 
    
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
-<div class="overlay"></div>
-<div class="container">
-<div class="row no-gutters slider-text align-items-center justify-content-center">
-<div class="col-md-9 pt-5 mt-5 text-center">
-<p class="breadcrumbs"><span class="me-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact <i class="fa fa-chevron-right"></i></span></p>
-<h1 class="mb-0 bread">Contact us</h1>
-</div>
-</div>
-</div>
-</section>
+
 <script src="js/script.js"></script>
 
 
@@ -153,7 +103,7 @@
       <div class="row align-items-stretch no-gutters contact-wrap">
         <div class="col-md-8">
           <div class="form h-100">
-            <h3 style="font-weight: bold;">Send us a message</h3>
+            <h3 style="font-weight: bold;">Send Us A Message</h3>
             <form class="mb-5" id="submit-form" onsubmit = "return validate();">
               <div class="row">
                 <div class="col-md-6 form-group mb-5">
@@ -214,8 +164,9 @@
         </div>
         <div class="col-md-4">
           <div class="contact-info h-100">
-            <h3 style="font-weight: bold;">Contact Information</h3>
-            <p class="mb-5">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
+            
+            <h3 style="font-weight: bold;">Contact Us</h3>
+            <p class="mb-5">We are always happy to help,If you have any queries regarding admission or courses please contact us.</p>
             <ul class="list-unstyled">
               <li class="d-flex">
                 <span class="wrap-icon fa fa-map-marker mr-3">&nbsp;&nbsp;&nbsp;&nbsp;</span>
