--- a/courses.html
+++ b/courses.html
@@ -116,102 +116,8 @@
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
-<div class="overlay"></div>
-<div class="container">
-<div class="row no-gutters slider-text align-items-center justify-content-center">
-<div class="col-md-9 pt-5 mt-5 text-center">
-<p class="breadcrumbs"><span class="me-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Courses <i class="fa fa-chevron-right"></i></span></p>
-<h1 class="mb-0 bread">Explore Courses</h1>
-</div>
-</div>
-</div>
-</section>
-<header>
-  <h1>Why Choose Us</h1>
-</header>
-<section class="features">
-  <div class="feature">
-    <i class="fa fa-globe"></i>
-    <h2>Global Reach</h2>
-    <p>Our company has a global presence, which means we can provide services and solutions to clients all around the world.</p>
-  </div>
-  <div class="feature">
-    <i class="fa fa-star"></i>
-    <h2>Quality Service</h2>
-    <p>We pride ourselves on providing high-quality services and solutions that meet the needs and expectations of our clients.</p>
-  </div>
-  <div class="feature">
-    <i class="fa fa-users"></i>
-    <h2>Expert Team</h2>
-    <p>Our team consists of highly skilled and experienced professionals who are dedicated to delivering the best results for our clients.</p>
-  </div>
-</section>
-<style>
-  * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-}
 
-header {
-  background-color: #292b86;
-  color: #fff;
-  padding: 20px;
-}
-
-header h1 {
-  font-size: 36px;
-  text-align: center;
-  color: #ffffff;
-}
-
-.features {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 50px;
-}
-
-.feature {
-  flex-basis: calc(33.33% - 20px);
-  margin-bottom: 50px;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #f2f2f2;
-  box-shadow: 2px 2px 10px rgb(252, 252, 252);
-}
-
-.feature i {
-  font-size: 48px;
-  margin-bottom: 20px;
-  color: #000000;
-}
-
-.feature h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  color: #000000;
-}
-
-.feature p {
-  font-size: 16px;
-  color: #000000;
-}
-
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-}
-
-</style>
 
 <div id="modal" class="modal">
   <div class="modal-content">
@@ -290,7 +196,7 @@ footer {
 
 <div class="col-md-8 heading-section text-center mb-5" data-aos="fade-up" data-aos-duration="1000">
 <span class="subheading">Courses</span>
-<h2 class="mb-4">Browse Our Online Courses</h2>
+<h2 class="mb-4"> Courses in India</h2>
 </div>
 </div>
 <div class="row g-lg-2 justify-content-center">
