--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 
   <nav class="navbar">
-      <div class="logos okk"><img class="nextt  ok" src="../images/mes blue.png" alt="Logo"></div>
+      <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i  class="fa fa-bars"></i>
@@ -1364,7 +1364,7 @@ window.onclick = function(event) {
 <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Contact Us</a></li>
 <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Terms &amp; Conditions</a></li>
 <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Feedbacks</a></li>
-<li><a href="../images/Whatisnext.in Application Form 23-24 (3).pdf" download><span class="ion ion-ios-arrow-round-forward me-2"></span>
+<li><a href="images/Whatisnext.in Application Form 23-24 (3).pdf" download><span class="ion ion-ios-arrow-round-forward me-2"></span>
 Application Form
 </a></li>
 </ul>
